# ai-assisted-test-repo

./: .gitignore  Dockerfile  README.md  ai-assisted-test-repo.code-workspace  pyproject.toml  results.json
ai_assisted_test_repo/cookbooks/api_assistant/: README.md  app.py  chainlit.md  requirements.txt
ai_assisted_test_repo/cookbooks/aws_ssm_assistant/: README.md  app.py  aws_parameter_manager.py  chainlit.md  create_conversational_retrieval_agent.py
ai_assisted_test_repo/cookbooks/graphql_assistant/: .env.example  app.py  chainlit.md  create_conversational_retrieval_agent.py  database_vector.py  graphql_execute_chain.py  introspection.py  requirements.txt
ai_assisted_test_repo/cookbooks/graphql_vector_search/: vector_demo.py
ai_assisted_test_repo/cookbooks/html_chain/: chain.py
ai_assisted_test_repo/cookbooks/langchain_ui_assistant/: app.py  chainlit.md
ai_assisted_test_repo/cookbooks/langchain_ui_assistant/.chainlit/: config.toml
ai_assisted_test_repo/cookbooks/langgraph_graphql/: README.md  app.py
ai_assisted_test_repo/cookbooks/langgraph_graphql/profiles/: base_profile.py
ai_assisted_test_repo/cookbooks/multi_agent_ui/: README.md  app.py
ai_assisted_test_repo/cookbooks/single_agent_ui/: README.md  app.py  chainlit.md
ai_assisted_test_repo/cookbooks/single_agent_ui/agents/: create_html_conversational_retrieval_agent.py
ai_assisted_test_repo/cookbooks/test_management_assistant/: app.py  chainlit.md
ai_assisted_test_repo/cookbooks/ui_assistant/: app.py  assistants.json  create_assistant.py
ai_assisted_test_repo/openai/: num_tokens_from_messages.py
ai_assisted_test_repo/scripts/: setup_browserless.sh
ai_assisted_test_repo/tools/: embeddings.py  export_model.py
ai_assisted_test_repo/tools/ui/: export.py  model.py  registry.py
ai_assisted_test_repo2/cookbooks/ui_assistant/: assistants.json
ai_assisted_test_repo2/tools/: load_functions.py
tests/: test_with_qbert.py
tools/: embeddings.py  export_model.py
tools/graphql/: chain.py  graphql_execute_tool.py  introspection.py
tools/jira/: __init__.py  jira_custom_toolkit.py
tools/test_management/: __init__.py  fetch_test.py  models.py  save_test.py  update_test.py
tools/toolkits/: default_toolkit.py  researcher_toolkit.py  test_documentation_toolkit.py  test_execution_toolkit.py
tools/ui/: basic_chain.py  chain.py  click_element.py  condense_html.py  custom_chain.py  fill_element.py  get_elements.py  keyboard.py  manage_html.py  playwright.py
(+17 files in other folders)
