[tool.poetry]
name = "ai-assisted-test-repo"
version = "0.1.0"
description = "A repository utilizing ai to create/execute/test any application you can throw at it"
authors = ["Nathan West"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

pymongo = "^4.6.1"
chainlit = "^0.7.700"
playwright = "^1.40.0"
beautifulsoup4 = "^4.12.2"
readmeai = "^0.4.79"

[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
